compiler/testData/diagnostics/tests/annotations/noNameProperty.kt
annotation class Ann(val x: Int, val<!SYNTAX!><!> )